fix navbar overlap issue

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ h1 {
 }
 
 .heading {
-    padding-top: 5%;
+  padding-top: 60px;
 }
 
 .navbar .navbar-nav {
